# rigid-body-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install.sh
common/: .Camera.h.swp  .DebugRenderer.h.swp  .Scene.h.swp  AABB.h  Benchmark.h  Camera.h  DebugRenderer.h  Entity.h  Helper.h  InactivityDetector.h  Light.h  Mesh.h  Model.h  PhysicManager.h  RigidBody.h  RigidBodyModel.h  Scene.h  Shader.h  Shape.h  SpawnPoint.h  WindowManager.h  timer.h
common/collision/: CollisionDetector.h  Contact.h  ContactManifold.h  EPAPolytope.h  GJKSimplex.h  MinowskiEdge.h  MinowskiPoint.h  MinowskiTriangle.h
common/constraint/: BallJointConstraint.h  BodyDistanceConstraint.h  Constraint.h  ConstraintSolver.h  ContactConstraint.h  DistanceConstraint.h  HingeConstraint.h  SoftDistanceConstraint.h  SoftTwoBodyDistanceConstraint.h  SpringConstraint.h  (+1 more)
resource_preprocessing/: convert_picture.sh
resources/: .colorFragmentShader.txt.swp  .depthVertexShader.txt.swp  .fragmentColorShader.txt.swp  .vertexShader.txt.swp  CGL_Logo-Text_Right.txt  ETHZ.txt  ball_over_ball_thomaset.prt  ball_over_ball_thomaset.prt.stl  ball_over_ball_thomaset_dwg_1-1.prt  colorFragmentShader.txt  colorVertexShader.txt  complete_scene.c4d  debugFragmentShader.txt  debugVertexShader.txt  depthFragmentShader.txt  depthVertexShader.txt  draft_scene.mtl  duck.txt  katapult.c4d  looping.prt  looping_dwg_1-1.prt  looping_thomaset.blend  looping_thomaset.mtl  looping_thomaset.stl  master.blend  master.blend1  master.mtl  test.3ds  test.blend  test.stl  textureFragmentShader.txt  trump_wall.txt  vertical.mtl  wall.txt
(+21 files in other folders)
